# sub2api

./: .augmentroot  .dockerignore  .gitignore  ANTI_BAN_LOCAL_CAPTURE_ACCEPTANCE_PREP.md  Dockerfile  Makefile  OPENAI_GATEWAY_V03_ALIGNMENT_DESIGN.md  README.md  README_CN.md  README_JA.md  rt_import_ui.html  rt_import_ui_server.py  zhumeng-landing-demo-v5.html  启动.md
tools/zhumeng-agent/: MODEL_PICKER_INJECTION.md  README.md  pyproject.toml
tools/zhumeng-agent/desktop/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
tools/zhumeng-agent/docs/: zhumeng-agent-data-asset-workbench-design.md  zhumeng-agent-desktop-design.md  zhumeng-agent-desktop-implementation-plan.md  zhumeng-agent-desktop-mac-mvp-acceptance.md  zhumeng-agent-desktop-mockup.html  zhumeng-agent-desktop-multi-app-mockup.html  zhumeng-agent-training-data-flywheel-design.md  zhumeng-enterprise-learning-loop-and-data-sovereignty-design.md
tools/zhumeng-agent/tests/: test_claude_code_evidence_gate.py  test_claude_code_guard.py  test_claude_code_launcher.py  test_claude_code_live_matrix_cp8.py  test_claude_code_model_overlay_cp2.py  test_claude_code_model_overlay_cp3a.py  test_claude_code_model_overlay_cp4_route_hint.py  test_claude_code_netwatch.py  test_claude_code_profile.py  test_claude_code_provider_probe_cp6.py  test_claude_code_runtime_installer.py  test_claude_code_shape_check.py  test_claude_code_status.py  test_claude_code_toolsearch_profile.py  test_claude_code_transcript_boundary_cp3b.py  test_claude_code_transcript_boundary_cp6.py  (+20 more)
(+1649 files in other folders)
