[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhumeng-agent"
version = "0.1.0"
description = "Local managed Codex setup tool for sub2api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10.0",
  "filelock>=3.16.0",
  "httpx>=0.27.0",
  "keyring>=25.3.0",
  "platformdirs>=4.3.0",
  "pydantic>=2.8.0",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
zhumeng-agent = "zhumeng_agent.cli:main"
zhumeng-claude = "zhumeng_agent.cli:zhumeng_claude_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
