[package]
name = "zhumeng-agent-desktop"
version = "0.1.0"
description = "Zhumeng Agent desktop shell"
authors = ["Zhumeng"]
edition = "2021"

[lib]
name = "zhumeng_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zhumeng-agent-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.4", features = ["tray-icon"] }
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0"
